# infe.rs

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: pre-commit.yml
configs/: dbsecret.txt
inference/: Cargo.toml  Dockerfile
inference/src/: bert.rs  error_enums.rs  main.rs  message_structs.rs  postgres.rs
queuer/: Cargo.toml  Dockerfile
queuer/migrations/: 0001_create-queue_up.sql
queuer/src/: main.rs  message_structs.rs  postgres.rs
scripts/: reset_docker.sh  test_api.sh
src/: main.rs
