[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
deadpool-postgres = "0.14.0"
hf-hub = "0.3.2"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
tokenizers = "0.19.1"
tokio = { version = "1.39.1", features = ["full"] }
tokio-macros = "2.4.0"
tokio-postgres = "0.7.11"
