[package]
name = "queuer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
deadpool-postgres = "0.14.0"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio-postgres = "0.7.11"
tokio-postgres-migration = "0.1.0"
